# claimlink

./: .gitignore  .gitlab-ci.yml  .local-test-principals  CLAUDE.md  Cargo.toml  README.md  build-and-deploy.sh  canister_ids.json  dfx.json  et --hard b600b89  mops.toml  package-lock.json  package-set.dhall  package.json  scripts.sh  vessel.dhall  w7xbu-y6hux-fnqyx-34ess-gj3x3-p6vov-mcvhf-vyda6-2k6r3-ckoiy-7ae.pem
backend/: CLAUDE.md  README.md
backend/canisters/claimlink/: CHANGELOG.md
backend/canisters/claimlink/api/: Cargo.toml  can.did
backend/canisters/claimlink/api/src/: lib.rs  storable.rs
backend/canisters/claimlink/api/src/cbor/: build_version.rs  i128.rs  mod.rs  nat.rs  tests.rs
backend/canisters/claimlink/api/src/lifecycle/: init.rs  post_upgrade.rs
backend/canisters/claimlink/api/src/queries/: collection_exists.rs  estimate_mint_cost.rs  get_collection_count.rs  get_collection_info.rs  get_collection_nfts.rs  get_collections_by_owner.rs  get_collections_for_user.rs  get_metrics.rs  get_mint_request.rs  get_mint_requests_by_owner.rs  get_nft_details.rs  get_ogy_usd_price.rs  get_template_by_id.rs  get_template_ids_by_owner.rs  get_templates_by_owner.rs  get_user_nfts.rs  icrc_10.rs  icrc_21.rs  icrc_28.rs  list_all_collections.rs  mod.rs
backend/canisters/claimlink/api/src/types/: collection.rs  cycles.rs  errors.rs  lifecycle.rs  metrics.rs  mint.rs  mod.rs  pricing.rs  sub_canister.rs  templates.rs
backend/canisters/claimlink/api/src/updates/: burn_nft.rs  create_collection.rs  create_template.rs  delete_template.rs  icrc_21.rs  initialize_mint.rs  mint_nfts.rs  mod.rs  proxy_logo_upload.rs  proxy_upload.rs  request_mint_refund.rs  set_ogy_price.rs  update_template.rs
backend/canisters/claimlink/impl/: Cargo.toml
backend/canisters/claimlink/impl/src/: guards.rs  lib.rs  memory.rs  state.rs  utils.rs
backend/canisters/claimlink/impl/src/canister_management/: mod.rs
backend/canisters/claimlink/impl/src/cbor/: mod.rs  u128.rs
backend/canisters/claimlink/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/claimlink/impl/src/queries/: collection_exists.rs  estimate_mint_cost.rs  get_collection_count.rs  get_collection_info.rs  get_collection_nfts.rs  get_collections_by_owner.rs  get_collections_for_user.rs  get_metrics.rs  get_mint_request.rs  get_mint_requests_by_owner.rs  get_nft_details.rs  get_ogy_usd_price.rs  get_template_by_id.rs  get_template_ids_by_owner.rs  get_templates_by_owner.rs  get_user_nfts.rs  http_request.rs  icrc_10.rs  icrc_21.rs  icrc_28.rs  list_all_collections.rs  list_my_collections.rs  mod.rs
backend/canisters/claimlink/impl/src/state/: audit.rs  mod.rs
backend/canisters/claimlink/impl/src/storage/: events.rs  memory.rs  mod.rs  tests.rs  wasm_store.rs
backend/canisters/claimlink/impl/src/task_manager/: burn_ogy.rs  create_canister.rs  cycles_top_up.rs  fetch_ogy_price.rs  install_canister.rs  mod.rs  reimburse_ogy.rs  retry_installation.rs  upload_template.rs
backend/canisters/claimlink/impl/src/types/: canister.rs  collections.rs  cycles.rs  events.rs  mint_requests.rs  mod.rs  templates.rs  wasm.rs
backend/canisters/claimlink/impl/src/updates/: burn_nft.rs  create_collection.rs  create_template.rs  delete_template.rs  icrc_21.rs  initialize_mint.rs  mint_nfts.rs  mod.rs  proxy_logo_upload.rs  proxy_upload.rs  request_mint_refund.rs  set_ogy_price.rs  update_template.rs
backend/canisters/claimlink/impl/src/utils/: log.rs  storable.rs
backend/external_canisters/ic_management/c2c_client/: Cargo.toml
backend/external_canisters/ic_management/c2c_client/src/: lib.rs
backend/external_canisters/icpswap/c2c_client/: Cargo.toml
backend/external_canisters/icpswap/c2c_client/src/: lib.rs
backend/external_canisters/origyn_nft/api/: Cargo.toml  can.did
backend/external_canisters/origyn_nft/api/src/types/: icrc37.rs  icrc7.rs  lifecycle.rs  management.rs  mod.rs
backend/external_canisters/origyn_nft/c2c_client/: Cargo.toml
backend/external_canisters/origyn_nft/c2c_client/src/: lib.rs
backend/integration_tests/: Cargo.toml
backend/integration_tests/src/: lib.rs  wasms.rs
backend/integration_tests/src/claimlink_suite/: init.rs  mod.rs
backend/integration_tests/src/claimlink_suite/tests/: mod.rs  test_collection_queries.rs  test_collections_for_user.rs  test_create_collection.rs  test_create_template.rs  test_cycles_top_up.rs  test_delete_template.rs  test_get_template_by_id.rs  test_get_template_ids_by_owner.rs  test_get_templates_by_owner.rs  test_paid_minting.rs  test_something.rs  test_update_template.rs  test_upgrade_canister.rs
backend/integration_tests/src/client/: claimlink.rs  icrc1_icrc2_token.rs  macros.rs  mod.rs  origyn_nft.rs  pocket.rs
backend/libraries/http_request/: Cargo.toml
backend/libraries/utils/: Cargo.toml
backend/libraries/utils/src/: consts.rs  env.rs  lib.rs  memory.rs
frontend/claimlink_dashboard/: .env.example  .env.production  .env.staging  .gitignore  CHANGELOG.md  CLAUDE.md  COMPONENT_PATTERNS.md  PHASE_3_COMPLETE.md  PHASE_3_SUMMARY.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  TANSTACK_FORM_PATTERNS.md  env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/claimlink_dashboard/docs/: ARCHITECTURE.md  B2B-MINTING-DAPP-REFERENCE.md  CANISTER-INTEGRATION.md  DATA-FLOWS.md  STATE-MANAGEMENT.md  (+1 more)
scripts/: build-all-canister.sh  config.sh  deploy-backend-canister.sh  setup-local-testing.sh
scripts/canister-deploy/: deploy-claimlink.sh
scripts/ci-cd/: .canister_builds.yml  .canister_deploys.yml  .canister_unit_test_coverage.yml  .dfx_templates.yml  .frontend_builds.yml  .frontend_deploys.yml  .frontend_linter.yml  .integration_tests.yml  .libraries_unit_test_coverage.yml  .node_template.yml  .rust_template.yml
src/assets_canister/: HttpTypes.mo  assets.mo
src/claimlink_backend/: OrigynNFTInterface.mo  main.mo  registry.mo
src/claimlink_frontend/: index.html  package.json  tailwind.config.js  vite.config.js
test/: sample.test.mo
(+954 files in other folders)
