[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
origyn-nft-canister-api = { path = "../external_canisters/origyn_nft/api" }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
lazy_static = { workspace = true }
serde_bytes = { workspace = true }
claimlink_api = { path = "../canisters/claimlink/api" }
pocket-ic = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
types = { path = "../libraries/types" }
sha2 = "0.10.8"
hex = "0.4"
bity-ic-canister-time = { workspace = true }
utils = { path = '../libraries/utils' }

