[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
lazy_static = { workspace = true }
serde_bytes = { workspace = true }
bity-ic-canister-time = { workspace = true }
pocket-ic = { workspace = true }
serde = { workspace = true }

claimlink_api = { path = "../canisters/claimlink/api" }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
origyn-nft-canister-api = { path = "../external_canisters/origyn_nft/api" }
types = { path = "../libraries/types" }
utils = { path = '../libraries/utils' }

rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4"

