[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-types = { workspace = true }
bity-ic-stable-memory = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
types = { path = "../types" }

