[package]
name = "claimlink_api"
version = "0.1.0"
description = "API for claimlink canister."
edition = "2021"

[features]
inttest = []

[dependencies]
candid = { workspace = true }
bity-ic-canister-logger = { workspace = true }
bity-ic-canister-state-macros = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-canister-tracing-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
types = { path = '../../../libraries/types' }
