[package]
name = "claimlink_api"
version = "0.1.0"
description = "API for claimlink canister."
edition = "2021"

[features]
inttest = []

[dependencies]
bity-ic-canister-logger = { workspace = true }
bity-ic-canister-state-macros = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-canister-tracing-macros = { workspace = true }
bity-ic-subcanister-manager = { workspace = true }
bity-ic-utils = { workspace = true }
bity-ic-types = { workspace = true }

types = { path = '../../../libraries/types' }
origyn-nft-canister-api = { path = '../../../external_canisters/origyn_nft/api' }

ic-cdk = { workspace = true }
candid = { workspace = true }
canfund = { workspace = true }
serde = { workspace = true, features = ["derive"] }


