[package]
name = "claimlink"
version = "0.1.0"
description = "Main back-end canister of the minting studio"
edition = "2021"

[features]
inttest = []

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
bity-ic-canister-logger = { workspace = true }
bity-ic-canister-state-macros = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-canister-tracing-macros = { workspace = true }
bity-ic-stable-memory = { workspace = true }
bity-ic-serializer = { workspace = true }

futures = { workspace = true }
hex = { workspace = true }
http_request = { path = '../../../libraries/http_request' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
claimlink_api = { path = "../api" }
utils = { path = "../../../libraries/utils" }
types = { path = "../../../libraries/types" }