[package]
name = "claimlink"
version = "0.1.0"
description = "Main back-end canister of the minting studio"
edition = "2021"

[features]
inttest = []

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bity-ic-canister-logger = { workspace = true }
bity-ic-canister-state-macros = { workspace = true }
bity-ic-canister-time = { workspace = true }
bity-ic-canister-tracing-macros = { workspace = true }
bity-ic-serializer = { workspace = true }
bity-ic-stable-memory = { workspace = true }
bity-ic-subcanister-manager = { workspace = true }
bity-ic-types = { workspace = true }
bity-ic-utils = { workspace = true }

claimlink_api = { path = "../api" }
http_request = { path = '../../../libraries/http_request' }
icrc_ledger_canister = { path = '../../../external_canisters/icrc_ledger/api' }
icrc_ledger_canister_c2c_client = { path = '../../../external_canisters/icrc_ledger/c2c_client' }
ic_management_canister_api = { path = '../../../external_canisters/ic_management/api' }
ic_management_canister_c2c_client = { path = '../../../external_canisters/ic_management/c2c_client' }
origyn-nft-canister-api = { path = '../../../external_canisters/origyn_nft/api' }
origyn-nft-canister-c2c-client = { path = '../../../external_canisters/origyn_nft/c2c_client' }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }



sha2 = { workspace = true }
candid = { workspace = true }
canfund = { workspace = true }
minicbor = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
ic0 = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
