[package]
name = "ic_management_canister_c2c_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bity-ic-canister-client = { workspace = true }
ic_management_canister_api = { path = "../api" }
types = { path = "../../../libraries/types" }
ic-cdk = { workspace = true }
