[package]
name = "origyn-nft-canister-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
bity-ic-candid-gen = { workspace = true }
bity-ic-canister-time = { workspace = true }
hex = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }
types = { path = "../../../libraries/types" }
icrc-ledger-types = { workspace = true }
bity-ic-icrc3 = { workspace = true }
serde_bytes = { workspace = true }
bity-ic-storage-canister-api = { workspace = true }
bity-ic-types = { workspace = true }